--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "gstin-validation",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "deploy": "wrangler deploy",
     "dev": "wrangler dev",
     "start": "wrangler dev"
   },
+  "dependencies": {
+    "cheerio": "^1.0.0"
+  },
   "devDependencies": {
-    "wrangler": "^3.60.3"
+    "wrangler": "^3.99.0"
   }
 }
